fixed footer on mobile for

--- a/client/src/components/Layout/components/Footer/styles.scss
+++ b/client/src/components/Layout/components/Footer/styles.scss
@@ -21,11 +21,10 @@ footer{
     .contact-link{
       display: flex;
       margin: 10px;
-      a{
-        img{
-
-        }
-      }
     }
   }
+}
+
+.no-footer{
+  height: 120px;
 }
